[package]
authors = ["Mario Reder <mreder1289@gmail.com>"]
build = "build.rs"
edition = "2018"
name = "net64-classic"
version = "0.1.0"
[build-dependencies]
pkg-config = "*"

[dependencies]
byteorder = "*"
gtk = "*"
libc = "*"
libloading = "0.5.0"
nix = "*"
relm = "*"
relm-derive = "*"
sysinfo = "*"
