[package]
authors = ["Mario Reder <mreder1289@gmail.com>"]
build = "build.rs"
edition = "2018"
name = "net64-classic"
version = "0.1.0"
[build-dependencies]
pkg-config = "*"

[dependencies]
byteorder = "*"
gtk = "*"
libc = "*"
nix = "*"
relm = "*"
relm-derive = "*"
sysinfo = "*"

[dependencies.libloading]
path = "../rust_libloading"
