[package]
authors = ["Mario Reder <mreder1289@gmail.com>"]
edition = "2018"
name = "net64-classic"
version = "0.1.0"

[dependencies]
azul = { git = "https://github.com/maps4print/azul" }
byteorder = "1.3"
libc = "0.2"
nix = "0.13"

[dependencies.libloading]
git = "https://github.com/Tarnadas/rust_libloading"
